# StartupRouteMaster

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  AI_FOLDER_FIXES_SUMMARY.txt  ARCHITECTURE_STUDY_SUMMARY.md  BACKEND_APP_AUDIT.md  BACKEND_ARCHIVE_EXECUTION.md  BACKEND_CLEANUP_SUMMARY.md  BETA_TESTING_GUIDE.md  CODE_CHANGES_REFERENCE.md  CODE_IMPLEMENTATION_SUMMARY.py  COMPLETE_CLEANUP_SUMMARY.md  COMPLETE_DETAILED_WORKFLOW_PIPELINE.md  COMPLETE_EXECUTION_CHECKLIST.md  COMPLETE_REPORT.md  COMPLETE_WORKFLOW_PIPELINE.md  COMPREHENSIVE_GAP_ANALYSIS.md  COMPREHENSIVE_TESTING_PLAN.md  CONSOLIDATION_ANALYSIS.md  CONSOLIDATION_COMPLETE.md  CONSOLIDATION_EXECUTION_PLAN.md  CONSOLIDATION_FINAL.md  CONSOLIDATION_FINAL_REPORT.md  CORE_FOLDER_DETAILS.md  CORE_IMPLEMENTATION_IDEAS.md  CRITICAL_SYSTEMS_IMPLEMENTATION.md  DATABASE_ANALYSIS.md  DATABASE_ARCHITECTURE_DEEP_DIVE.md  DEBUG_FIXES_SUMMARY.md  DEDUPLICATION_STRATEGY.md  DELIVERABLES_SUMMARY.txt  DELIVERY_EXECUTIVE_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_ENV_GUIDE.md  DEPLOYMENT_INTEGRATION_PLAYBOOK.md  DEPLOYMENT_PAYMENT_CHECKLIST.md  DOCUMENTATION_INDEX.md  DUPLICATE_FILES_REGISTRY.md  (+144 more)
backend/: .dockerignore  .env.example  ARCHITECTURE_V2.md  BACKEND_FEATURES.md  BACKEND_GAPS_ANALYSIS.md  COMPLETION_SUMMARY.md  DEEP_DIVE_PIPELINE_TASKS.md  Dockerfile  EXECUTE_CONSOLIDATION.sh  ISSUES_AND_FIXES.md  ML_TRAINING_PIPELINE_README.md  OFFLINE_API_REFERENCE.md  ORGANIZATION_PHASE_0_COMPLETE.md  PHASE_1_COMPLETE.md  PHASE_1_DEPLOYMENT_GUIDE.md  PHASE_1_FINAL_STATUS.md  README.md  a.md  app.py  (+68 more)
(+1142 files in other folders)
