[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==23.2.1",
    "aiokafka==0.10.0",
    "alembic==1.12.1",
    "apscheduler==3.10.4",
    "celery==5.3.6",
    "confluent-kafka[librdkafka]==2.3.0",
    "fastapi==0.109.2",
    "fastapi-cache2==0.2.2",
    "geoalchemy2==0.14.2",
    "httpx==0.25.2",
    "itemadapter==0.8.0",
    "joblib==1.3.2",
    "kafka-python==2.0.2",
    "lightgbm==4.3.0",
    "matplotlib==3.8.2",
    "numpy==1.26.2",
    "passlib[bcrypt]==1.7.4",
    "pre-commit==3.6.2",
    "prometheus-fastapi-instrumentator==7.0.0",
    "psutil==5.9.8",
    "psycopg2-binary==2.9.9",
    "pydantic[email]==2.6.4",
    "pydantic-settings==2.2.1",
    "pyroaring==1.0.3",
    "pytest==8.0.2",
    "pytest-asyncio==0.23.5",
    "pytest-cov==4.1.0",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "redis==5.0.1",
    "requests==2.31.0",
    "schedule==1.2.1",
    "scikit-learn==1.3.2",
    "scrapy==2.11.1",
    "sendgrid==6.11.0",
    "slowapi>=0.1.9",
    "sqlalchemy==2.0.23",
    "supabase==2.4.3",
    "twilio==8.11.0",
    "uvicorn==0.24.0",
    "pybreaker>=1.4.1",
    "pandas>=2.3.3",
    "tenacity>=9.1.4",
    "flask>=3.1.3",
]
